# ascii-renderer

./: AGENTS.md  CHARACTER_CONNECTIONS_INDEX.md  CHARACTER_CONNECTION_DESIGN.md  CHAR_CHEAT_SHEET.txt  CHAR_CONNECTIONS_README.md  CLAUDE.md  Cargo.toml  ORGANIC_CHAR_BUILDER.rs  ORGANIC_CHAR_CONNECTIONS.md  QUICK_CHAR_MATRIX.md  RESEARCH.md  TREE_PATTERN_EXAMPLES.md  VISUAL_CONNECTION_DIAGRAMS.md  char_exits_reference.rs
chat_log/: 20260315.0.ascii-renderer-poc.md  20260315.1.ascii-renderer-full.md  20260315.2.ascii-renderer-color-themes.md  20260316.0.ascii-renderer-layout-md.md  20260316.1.ascii-renderer-borders-walker-lineart.md  20260316.2.ascii-renderer-tile-noise-system.md  20260316.3.ascii-renderer-biome-mask-terrain.md  20260317.0.ascii-renderer-scene-composition.md  20260317.1.ascii-renderer-terrain-scene-composition.md  20260317.2.ascii-renderer-terrain-variety.md  20260318.0.ascii-renderer-scene-walker.md  20260318.1.ascii-renderer-scene-walker.md  20260318.10.forest5-treepen-connectivity.md  20260318.2.ascii-renderer-scene-walker.md  20260318.3.ascii-renderer-tile-edge-behavior.md  20260318.4.ascii-renderer-shape-masks-trees.md  20260318.5.ascii-renderer-party-walk-vision.md  20260318.6.ascii-renderer-party-walk-params.md  20260318.7.ascii-renderer-party-complexity.md  20260318.8.ascii-renderer-party-complexity.md  20260318.9.forest4-trees-algorithmic-sprites.md  20260319.0.forest6-trait-system-connect-fix.md  20260319.1.forest6-trait-connect-fix-flowers.md  20260319.2.forest6-all-trait-trees-parity.md  20260319.3.forest6-trait-trees-curves-plan.md  LATEST.md  (+8 more)
(+134 files in other folders)
