[package]
name = "ascii-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
console_engine = "2.6.1"
crossterm = "0.26"
pulldown-cmark = "0.13.1"
rand = "0.10.0"
unicode-width = "0.2.2"

[dev-dependencies]
insta = "1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"


[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 2
